# testyy

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  init.lua  vcpkg.json
.github/workflows/: build-linux.yml  build-windows.yml
data/fonts/: noto-12.otfont  sans-bold-16px.otfont  verdana-11px-antialised.otfont  verdana-11px-monochrome-underline.otfont  verdana-11px-monochrome.otfont  verdana-11px-rounded.otfont
data/locales/: pl.lua
data/mods/language_picker_override/: init.lua  language_picker_override.otmod
data/things/: .gitignore
modules/client_entergame/: entergame.lua  entergame.otui
modules/client_locales/: locales.lua  locales.otui  locales_bridge_openLanguagePicker.lua
modules/client_serverlist/: serverlist.lua
modules/client_topmenu/: topmenu.lua  topmenu_language_button.otui
src/: CMakeLists.txt
src/framework/graphics/: bitmapfont.cpp  bitmapfont.h
src/framework/text/: TTFFont.cpp  TTFFont.h  TextShaper.cpp  TextShaper.h
vc17/: UpgradeLog.htm
